[package]
name = "chronologic"
version = "0.4.0"
edition = "2021"
authors = ["Xophe <christophe.dousson@me.com>"]
license = "MIT"
description = "Utilities for time constraint reasoning"
repository = "https://github.com/XopheD/chronologic"
documentation = "https://docs.rs/chronologic"
keywords = ["time","constraint","reasoning"]
categories = ["data-structures","algorithms"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = { version = "0.4.19", default-features = false }
embed-doc-image = "0.1.4"
